made logo redirect to home page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
    <nav>
       <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <%= link_to root_path do  %>
             <%= image_tag 'burgs_logo', alt: "burgs-r-us logo", class: "w-25" %>
-          </a>
+          <% end %>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
