--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="home-banner">
+  <div class="container mt-0">
+    <h1>Burgs as far as the eye can see...</h1>
+    <p>The choice is <strong>yours</strong>!</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        
+      </div>
+    </div>
+  </div>
+</div>
