--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -3,3 +3,5 @@
 <p>Start date: <%= @booking.start_date %></p>
 
 <p>End date: <%= @booking.end_date %></p>
+
+<%= link_to "Go to the burger page", burger_path(@burger) %>
