index tamplate wokring, footer improved, stylesheets aadded

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,22 +1,20 @@
 .footer {
-  background: #F4F4F4;
+  background: #FFBEAD;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 150px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
 .footer-links {
   display: flex;
   align-items: center;
+  width: 25%;
 }
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: #FCFCFC;
+  opacity: 0.5;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
@@ -26,4 +24,11 @@
 }
 .footer .fa-heart {
   color: #D23333;
+}
+
+.footer-copyright {
+  color: #FCFCFC;
+  opacity: 0.8;
+  width: 15%;
+  text-align: right;
 }
