--- a/app/views/burgers/index.html.erb
+++ b/app/views/burgers/index.html.erb
@@ -1,6 +1,28 @@
-<h1>All burgers</h1>
+<div class="home-banner">
+  <div class="container mt-0">
+    <h1>Burgs as far as the eye can see...</h1>
+    <p>The choice is <strong>yours</strong>!</p>
+  </div>
+</div>
 
-<% @burgers.each do |burger| %>
-<%= burger.name %>
-<%= burger.description %>
-<% end %>
+<div class="container">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-3 mt-4">
+    <% @burgers.each do |burger| %>
+      <div class="col">
+        <div class="card h-100 rounded-3 border-0 shadow position-relative">
+          <%= image_tag burger.photo[0], alt: 'photo of the burger', class: 'card-img-top rounded-top' %>
+          <div class="rating-overlay">
+            <small class="bg-light text-warning rounded-circle p-3"><i class="fa-solid fa-star"></i></small>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title"><%= burger.name %></h5>
+            <p class="card-text fw-light align-bottom"><%= burger.description %></p>
+          </div>
+          <div class="card-footer d-flex justify-content-end border-0">
+            <p class="card-text pb-0">$$$</p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
