--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,9 +4,11 @@
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div >
+    <%= image_tag 'footer-logo', alt: 'burgs logo', class: 'w-50 opacity-50' %>
   </div>
   <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+    BURGS-R-US is not responsible for any damages caused if ingestion of rental burgs occurs
   </div>
 </div>
