--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
     <a href="#"><i class="fab fa-twitter"></i></a>
   </div>
   <div >
-    <%= image_tag 'footer-logo', alt: 'burgs logo', class: 'w-50 opacity-50' %>
+    <%= cl_image_tag('footer-logo_vkykmu', alt: 'burgs logo', class: 'w-50 opacity-50') %>
   </div>
   <div class="footer-copyright">
     BURGS-R-US is not responsible for any damages caused if ingestion of rental burgs occurs
