Final logo test passing

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
     <a href="#"><i class="fab fa-twitter"></i></a>
   </div>
   <div >
-    <%= cl_image_tag('footer-logo_vkykmu', alt: 'burgs logo', class: 'w-50 opacity-50') %>
+    <%= image_tag('footer-logo.png', alt: 'burgs logo', class: 'w-50 opacity-50') %>
   </div>
   <div class="footer-copyright">
     BURGS-R-US is not responsible for any damages caused if ingestion of rental burgs occurs
