--- a/app/views/burgers/new.html.erb
+++ b/app/views/burgers/new.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container d-flex">
+  <main class="flex-fill">
     <h1>Add a new burger</h1>
     <%= simple_form_for(@burger) do |f| %>
       <%= f.input :name %>
@@ -9,5 +10,5 @@
                   input_html: { multiple: true }  %>
       <%= f.button :submit, "Add your burger" %>
     <% end %>
-
+  </main>
 </div>
