footer adapts to screen sizes, index page banner

--- a/app/views/burgers/index.html.erb
+++ b/app/views/burgers/index.html.erb
@@ -1,11 +1,13 @@
 <div class="home-banner">
-  <div class="container mt-0">
-    <h1>Burgs as far as the eye can see...</h1>
-    <p>The choice is <strong>yours</strong>!</p>
+  <div class="container py-5">
   </div>
 </div>
 
 <div class="container">
+  <div class='index-title text-center pt-5'>
+    <h1>Burgs as far as the eye can see...</h1>
+    <p>The choice is <strong>yours</strong>!</p>
+  </div>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-3 mt-4">
     <% @burgers.each do |burger| %>
       <div class="col">
