--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,14 +3,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 150px;
-  padding: 0px 50px;
+  height: auto;
+  padding: 50px;
   color: rgba(0,0,0,0.3);
 }
 .footer-links {
   display: flex;
   align-items: center;
-  width: 25%;
+  // width: 25%;
 }
 .footer-links a {
   color: #FCFCFC;
@@ -29,6 +29,6 @@
 .footer-copyright {
   color: #FCFCFC;
   opacity: 0.8;
-  width: 15%;
+  // width: 15%;
   text-align: right;
 }
