--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,14 +1,26 @@
-<div class="footer">
-  <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-  </div>
-  <div >
-    <%= image_tag('footer-logo.png', alt: 'burgs logo', class: 'w-50 opacity-50') %>
-  </div>
-  <div class="footer-copyright">
-    BURGS-R-US is not responsible for any damages caused if ingestion of rental burgs occurs
+<div class="footer d-block">
+  <div class="row row-cols-1 row-cols-md-3 g-5">
+    <div class="col">
+    </div>
+    <div class = "col text-center">
+      <%= image_tag('footer-logo.png', alt: 'burgs logo', class: 'w-50 opacity-50') %>
+    </div>
+    <div class="col">
+    </div>
+    <div class="col text-center align-text-bottom">
+      <div class="footer-links justify-content-center">
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+      </div>
+    </div>
+    <div class="col">
+    </div>
+    <div class="col text-center justify-content-center">
+      <div class="footer-copyright">
+        BURGS-R-US is not responsible for any damages caused if ingestion of rental burgs occurs
+      </div>
+    </div>
   </div>
 </div>
