--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,46 @@
 <div class="container">
-<h2>Sign up</h2>
+  <div class="row">
+    <div class="col-8 d-flex align-content-center">
+      <%= image_tag "big_burg", width: "100%", style:"object-fit: cover" %>
+    </div>
+    <div class="col-4 p-4 background-white">
+      <h2>Sign up</h2>
 
-    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
-      <%= f.error_notification %>
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
+            <%= f.error_notification %>
 
-      <div class="form-inputs">
-        <%= f.input :username,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "username" }%>
-        <%= f.input :email,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "email" }%>
+            <div class="form-inputs">
+              <%= f.input :username,
+                          required: true,
+                          autofocus: true,
+                          input_html: { autocomplete: "username" }%>
+              <%= f.input :email,
+                          required: true,
+                          autofocus: true,
+                          input_html: { autocomplete: "email" }%>
 
-        <%= f.input :password,
-                    required: true,
-                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                    input_html: { autocomplete: "new-password" } %>
+              <%= f.input :password,
+                          required: true,
+                          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                          input_html: { autocomplete: "new-password" } %>
 
-        <%= f.input :password_confirmation,
-                    required: true,
-                    input_html: { autocomplete: "new-password" } %>
+              <%= f.input :password_confirmation,
+                          required: true,
+                          input_html: { autocomplete: "new-password" } %>
 
-        <%= f.input :photo,
-                    label: "Profile picture",
-                    as: :file,
-                    required: false %>
+              <%= f.input :photo,
+                          label: "Profile picture",
+                          as: :file,
+                          required: false %>
 
+            </div>
+
+            <div class="form-actions">
+              <%= f.button :submit, "Sign up" %>
+            </div>
+          <% end %>
+
+          <%= render "devise/shared/links" %>
       </div>
-
-      <div class="form-actions">
-        <%= f.button :submit, "Sign up" %>
-      </div>
-    <% end %>
-
-    <%= render "devise/shared/links" %>
+    </div>
 </div>
