Burger can be edited, burger can be deleted, extra photos can be attached

--- a/app/views/burgers/_carousel.html.erb
+++ b/app/views/burgers/_carousel.html.erb
@@ -1,6 +1,6 @@
 <div id="burgs-carousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
-    <% @burger.photo.each_with_index do |photo, index| %>
+    <% @burger.photos.each_with_index do |photo, index| %>
       <% if index == 1 %>
         <div class="carousel-item active">
           <%= cl_image_tag(photo.key, class: "d-block rounded", width: "500", height: "500", :crop=>"fill") %>
