--- a/app/views/burgers/edit.html.erb
+++ b/app/views/burgers/edit.html.erb
@@ -1,13 +1,29 @@
-<h1>Edit <%= @burger.name %></h1>
+<div class="container">
+  <h1>Edit <%= @burger.name %></h1>
 
-<h3>Edit name</h3>
-  <%= simple_form_for(@burger) do |f| %>
-    <%= f.input :name %>
-    <%= f.submit %>
-  <% end %>
+    <%= simple_form_for(@burger) do |f| %>
+      <%= f.input :name, label: "Edit name" %>
+      <%= f.submit %>
+    <% end %>
 
-<h3>Edit the description</h3>
-  <%= simple_form_for(@burger) do |f| %>
-    <%= f.input :description %>
-    <%= f.submit %>
-  <% end %>
+    <%= simple_form_for(@burger) do |f| %>
+      <%= f.input :description, label: "Edit description" %>
+      <%= f.submit %>
+    <% end %>
+
+    <%= simple_form_for(@burger) do |f| %>
+      <%= f.input :photos,
+              label: "Add photos",
+              as: :file,
+              input_html: { multiple: true }  %>
+      <%= f.submit %>
+    <% end %>
+
+    <%# <h4>Edit your attached pictures</h4> %>
+    <%# <% @burger.photos.each |picture| %> %>
+        <%# <%= cl_image_tag(picture.key, class: "rounded", width: "500", height: "500", crop: "fill") %> %>
+    <%# <% end %> %>
+
+
+    <%= link_to "Back to burger", :back %>
+</div>
