--- a/app/views/burgers/index.html.erb
+++ b/app/views/burgers/index.html.erb
@@ -12,7 +12,7 @@
     <% @burgers.each do |burger| %>
       <div class="col">
         <div class="card h-100 rounded-3 border-0 shadow position-relative">
-          <%= link_to cl_image_tag(burger.photos[0].key, alt: 'photo of the burger', class: 'card-img-top rounded-top', style: 'text-decoration: none !important;'), burger_path(burger) %>
+          <%= link_to cl_image_tag(burger.photos[0].key, :width=>300, :height=>300, :crop=>"thumb", alt: 'photo of the burger', class: 'card-img-top rounded-top'), burger_path(burger) %>
           <div class="rating-overlay">
             <% if burger.reviews.count != 0 %>
               <small class="bg-light rounded-circle p-3 px-2"><%= burger.average_rating %> <i class="fa-solid fa-star fa-2xs"></i></small>
@@ -22,17 +22,17 @@
           </div>
           <%= link_to burger_path(burger) do %>
             <div>
-              <div class="card-body d-flex flex-column flex-grow-1">
+              <div class="card-body d-flex flex-column flex-grow-1 mb-5">
                 <h5 class="card-title"><%= burger.name %></h5>
-                <% if burger.description.split(" ").length > 10 %>
-                  <p class="card-text fw-light align-bottom"><%= burger.description.split(" ")[0, 10].join(" ") %>...</p>
+                <% if burger.description.split(" ").length > 7 %>
+                  <p class="card-text fw-light align-bottom"><%= burger.description.split(" ")[0, 7].join(" ") %>...</p>
                 <% else %>
-                  <p class="card-text fw-light align-bottom"><%= burger.description %></p>
+                  <p class="card-text fw-light align-bottom flex-grow-1"><%= burger.description %></p>
                 <% end %>
               </div>
             </div>
           <% end %>
-          <div class="card-footer d-flex justify-content-end border-0">
+          <div class="card-footer d-flex justify-content-end border-0 position-absolute bottom-0 w-100 mt-5">
             <p class="card-text pb-0 ">$$$</p>
           </div>
         </div>
