--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,86 @@
+<% user = User.find(current_user[:id]) %>
+
 <div class="container">
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
+    <h1>
+
+          <%= cl_image_tag(user.photo.key,
+                          alt: "profile picture of #{user.username}",
+                          class: "avatar d-inline mr-6") %>
+
+          <%= "#{user.username}'s profile" %>
+
+    </h1>
+
+    <h3 class="mt-5">All your burgers</h3>
+
+    <% if user.burgers.size >= 1 %>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-3 mt-4">
+            <% user.burgers.each do |burger| %>
+              <div class="col">
+                <div class="card h-100 rounded-3 border-0 shadow position-relative">
+                  <%= link_to cl_image_tag(burger.photos[0].key, alt: 'photo of the burger', class: 'card-img-top rounded-top'), burger_path(burger) %>
+                  <div class="rating-overlay">
+                    <% if burger.reviews.count != 0 %>
+                      <small class="bg-light rounded-circle p-3 px-2"><%= burger.average_rating %> <i class="fa-solid fa-star fa-2xs"></i></small>
+                    <% else %>
+                      <small class="bg-light rounded-circle p-3 px-1">New <i class="fa-solid fa-star fa-2xs"></i></small>
+                    <% end %>
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title"><%= burger.name %></h5>
+                    <p class="card-text fw-light align-bottom"><%= burger.description %></p>
+                  </div>
+                  <div class="card-footer d-flex justify-content-end border-0">
+                    <p class="card-text pb-0">$$$</p>
+                  </div>
+                </div>
+              <%= link_to "Delete burger", burger_path(burger), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete '#{burger}'"} %>
+              </div>
+
+            <% end %>
+          </div>
+    <% else %>
+        <p>You haven't created a burger yet.</p>
+    <% end %>
+
+    <h3 class="mt-5">All your bookings</h3>
+        <% if user.bookings.size >= 1 %>
+          <ul>
+            <% user.bookings.each do |booking| %>
+              <li>
+                <p>Booked burger: <%= booking.burger.name %></p>
+                <p>Start date: <%= booking.start_date %></p>
+                <p>End date: <%= booking.end_date %></p>
+              </li>
+            <% end %>
+          </ul>
+
+        <% else %>
+          <p>You don't have any bookings yet.</p></li>
+        <% end %>
+
+
+    <h3 class="mt-5">All your reviews</h3>
+
+    <% if user.reviews.size >= 1 %>
+        <ul>
+          <% user.reviews.each do |review| %>
+            <li>
+              <p>Rating: <%= "#{review.rating} / 5" %></p>
+              <p>Content: <%= "#{review.content}" %></p>
+              <%= link_to "Delete",
+                  burger_review_path(review.burger, review),
+                  data: {turbo_method: :delete, turbo_confirm: "Really delete this review?"}%>
+
+            </li>
+          <% end %>
+        </ul>
+    <% else %>
+      <p>You don't have any reviews yet.</p>
+    <% end %>
+
+    <h3 class="mt-5">Edit <%= resource_name.to_s.humanize %></h2>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= f.error_notification %>
@@ -34,6 +115,7 @@
         <%= f.button :submit, "Update" %>
       </div>
     <% end %>
+
 
     <h3>Cancel my account</h3>
 
