User with profile pictures now also have a valid profile page

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,10 +3,11 @@
 <div class="container">
 
     <h1>
-
-          <%= cl_image_tag(user.photo.key,
-                          alt: "profile picture of #{user.username}",
-                          class: "avatar d-inline mr-6") %>
+          <% if user.photo.key %>
+            <%= cl_image_tag(user.photo.key,
+                            alt: "profile picture of #{user.username}",
+                            class: "avatar d-inline mr-6") %>
+          <% end %>
 
           <%= "#{user.username}'s profile" %>
 
