reorganized and styled show page

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -39,3 +39,9 @@ input[type="submit"]:hover {
 .background-white {
   background-color: #FCFCFC;
 }
+
+.button-book {
+  border: none;
+  background-color: #FF5F38 !important;
+}
+
