--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,20 +1,32 @@
 .avatar {
   width: 40px;
+  height: auto;
   border-radius: 50%;
 }
 .avatar-large {
   width: 56px;
+  height: auto;
   border-radius: 50%;
 }
 .avatar-bordered {
   width: 40px;
+  height: auto;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
 .avatar-square {
   width: 40px;
+  height: auto;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+
+.avatar-shadow {
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+}
+
+.profile-shadow {
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 }
