--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container my-5">
   <div class="row">
     <div class="col-8 d-flex align-content-center">
       <%= image_tag "big_burg", width: "100%", style:"object-fit: cover" %>
