--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-8 d-flex align-content-center">
-      <%= image_tag "big_burg", width: "100%", style:"object-fit: cover" %>
+      <%= image_tag "big_burg.png", width: "100%", style:"object-fit: cover" %>
     </div>
     <div class="col-4 p-4 background-white">
       <h2>Sign up</h2>
