--- a/app/views/burgers/show.html.erb
+++ b/app/views/burgers/show.html.erb
@@ -1,8 +1,8 @@
 
-<div class="container grid mt-4">
-  <div class="row">
+<div class="container grid my-4" style="box-sizing: border-box;">
+  <div class="row g-3">
     <div class="col">
-      <div class="pb-4">
+      <div class="text-center">
         <% if @burger.photos.count > 1 %>
           <%= render "carousel" %>
         <% else %>
@@ -10,7 +10,7 @@
         <% end %>
       </div>
     </div>
-    <div class="col pb-4">
+    <div class="col card rounded-4 border-0 p-4 shadow-sm">
       <div class="show-page-main">
         <h1><%= @burger.name %></h1>
         <p><%= @burger.description %></p>
@@ -29,17 +29,18 @@
 
     </div>
   </div>
-  <div class="show-page-card background-white">
-    <div class="d-flex justify-content-between align-items-center">
-      <h2>Reviews</h2>
-      <%= link_to "Review", new_burger_review_path(@burger), class: "button-main" %>
-    </div>
-    <% @burger.reviews.each do |review| %>
-      <div class="review-item">
-        <p class="review-item-rating"><%= review.rating %></p>
-        <p><%= review.content %></p>
+  <div class="row">
+    <div class="col card rounded-4 border-0 p-4 shadow-sm mt-3 me-0">
+      <div class="d-flex justify-content-between align-items-center">
+        <h2>Reviews</h2>
+        <%= link_to "Review", new_burger_review_path(@burger), class: "button-main" %>
       </div>
-    <% end %>
+      <% @burger.reviews.each do |review| %>
+        <div class="review-item">
+          <p class="review-item-rating"><%= review.rating %></p>
+          <p><%= review.content %></p>
+        </div>
+      <% end %>
+    </div>
   </div>
-
 </div>
