Adding booking logic, waiting for form to appear from front-end team

--- a/app/views/burgers/show.html.erb
+++ b/app/views/burgers/show.html.erb
@@ -15,7 +15,7 @@
         <h1><%= @burger.name %></h1>
         <p><%= @burger.description %></p>
       </div>
-      
+
       <%# EDIT & DELETE LINKS, ONLY SHOW IF USER IS THE OWNER OF THE BURGER %>
 
       <% if current_user == @burger.user %>
@@ -41,4 +41,15 @@
         <p><%= review.content %></p>
       </div>
     <% end %>
+
+
+    <ul>
+      <% @burger.bookings.each do |booking| %>
+        <li>
+          <p>Booked by: <%= booking.user.username %></p>
+          <p>Start: <%= booking.start_date %></p>
+          <p>End: <%= booking.end_date %></p>
+        </li>
+      <% end %>
+    </ul>
   </div>
